--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <span class="tile-title">Gmail</span>
             </a>
 
-            <a class="tile" href="https://github.com/MohamedRuzaik9" target="_blank">
+            <a class="tile" href="https://github.com/" target="_blank">
               <img src="icons/github.svg" alt="" class="custom-icon">
               <span class="tile-title">GitHub</span>
             </a>
