--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home – Ruzaik</title>
   <link rel="stylesheet" href="style.css">
+  
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 32 32%22><rect x=%225%22 y=%225%22 width=%2210%22 height=%2210%22 rx=%223%22 fill=%22%234285F4%22/><rect x=%2217%22 y=%225%22 width=%2210%22 height=%2210%22 rx=%223%22 fill=%22%23EA4335%22/><rect x=%225%22 y=%2217%22 width=%2210%22 height=%2210%22 rx=%223%22 fill=%22%23FBBC05%22/><rect x=%2217%22 y=%2217%22 width=%2210%22 height=%2210%22 rx=%223%22 fill=%22%2334A853%22/></svg>">
 </head>
+
 <body data-theme="dark">
   <div class="bg"></div>
 
@@ -81,7 +85,7 @@
               <span class="tile-title">Gmail</span>
             </a>
 
-            <a class="tile" href="https://github.com/" target="_blank">
+            <a class="tile" href="https://github.com/MohamedRuzaik9" target="_blank">
               <img src="icons/github.svg" alt="" class="custom-icon">
               <span class="tile-title">GitHub</span>
             </a>
