--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <span class="tile-title">Gmail</span>
             </a>
 
-            <a class="tile" href="https://github.com/MohamedRuzaik9" target="_blank">
+            <a class="tile" href="https://github.com/Mohamed-Ruzaik" target="_blank">
               <img src="icons/github.svg" alt="" class="custom-icon">
               <span class="tile-title">GitHub</span>
             </a>
